# falyx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pylintrc  pyproject.toml  setup.py
examples/: action_example.py  action_factory_demo.py  argument_examples.py  auto_args_group.py  auto_parse_demo.py  config_loading.py  confirm_example.py  falyx.yaml  falyx_demo.py  file_select.py  http.yaml  http_demo.py  menu_demo.py  pipeline_demo.py  process.yaml  process_pool.py  run_key.py  selection_demo.py  shell_example.py  simple.py  single_http.py  submenu.py  type_validation.py  user_input_demo.py
falyx/: __init__.py  __main__.py  action.py  action_factory.py  argparse.py  bottom_bar.py  command.py  command_executor.py  command_runner.py  completer.py  completer_types.py  config.py  console.py  context.py  debug.py  exceptions.py  execution_option.py  execution_registry.py  falyx.py  hook_manager.py  hooks.py  http_action.py  importer.py  init.py  io_action.py  logger.py  menu.py  menu_action.py  mode.py  namespace.py  options_manager.py  parsers.py  prompt_utils.py  protocols.py  retry.py  retry_utils.py  routing.py  select_file_action.py  selection.py  selection_action.py  (+6 more)
falyx/action/: __init__.py  action.py  action_factory.py  action_group.py  action_mixins.py  action_types.py  base.py  base_action.py  chained_action.py  confirm_action.py  fallback_action.py  http_action.py  io_action.py  literal_input_action.py  load_file_action.py  menu_action.py  mixins.py  process_action.py  process_pool_action.py  prompt_menu_action.py  save_file_action.py  select_file_action.py  selection_action.py  shell_action.py  signal_action.py  types.py  user_input_action.py
falyx/main/: main.py
falyx/parser/: __init__.py  argparse.py  argument.py  argument_action.py  command_argument_parser.py  falyx_parser.py  group.py  parse_result.py  parser_types.py  parsers.py  signature.py  utils.py
falyx/parsers/: __init__.py  argparse.py  parsers.py  signature.py  utils.py
falyx/themes/: __init__.py  colors.py
scripts/: sync_version.py
tests/: test_action_basic.py  test_action_process.py  test_action_retries.py  test_actions.py  test_chained_action_empty.py  test_command.py  test_command_argument_parser.py  test_execute_command.py  test_execution_option.py  test_headless.py  test_main.py  test_run_key.py  test_stress_actions.py
tests/test_actions/: test_action_factory.py  test_action_types.py  test_confirm_action.py  test_selection_action.py
tests/test_completer/: test_completer.py  test_lcp_completions.py
tests/test_falyx/: test_help.py  test_run.py
tests/test_falyx_parser/: test_root_options.py
tests/test_parsers/: test_action.py  test_argument.py  test_argument_action.py  test_basics.py  test_coerce_value.py  test_completions.py  test_execution_option_registration.py  test_multiple_positional.py  test_nargs.py  test_negative_numbers.py  test_posix_bundling.py  test_resolve_args.py  test_store_bool_optional.py  test_tldr.py
tests/test_runner/: test_command_runner.py
tests/test_validators/: test_command_validator.py  test_int_range_validator.py  test_key_validator.py  test_multi_index_validator.py  test_multi_key_validator.py  test_word_validator.py  (+2 more)
